<resources>
    <string name="app_name">电力机具管理</string>
    <string name="back">返回</string>
    <string name="login">登录</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="startRegist">开始注册</string>
    <string name="regist">注册</string>
    <string name="resPwd">修改密码</string>
    <string name="confirm">确认</string>
    <string name="newUserAudit">新用户审批</string>
    <string name="stockQuery">工具库存情况查询</string>
    <string name="borrowAudit">借用单审核</string>
    <string name="toolStockQuery">工具库存查询</string>
    <string name="applyQuery">借用申请查询</string>
    <string name="qianyin">牵引工具</string>
    <string name="yajie">压接工具</string>
    <string name="yuliu">预留菜单</string>
</resources>
