<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/bg"
    android:layout_height="match_parent"
    tools:context=".service.ManagerMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:orientation="vertical">

        <!-- the login button -->
        <Button
            android:id="@+id/btnToolQuery"
            style="@style/textstyle"
            android:layout_width="fill_parent"
            android:background="@drawable/cycleanytext_shape"
            android:onClick="OnToolStockQueryClick"
            android:text="@string/toolStockQuery"/>
        <Button
            android:id="@+id/btnApplyAuery"
            style="@style/textstyle"
            android:layout_width="fill_parent"
            android:background="@drawable/cycleanytext_shape"
            android:onClick="OnBorrowAuditClick"
            android:text="@string/borrowAudit"/>
        <Button
            android:id="@+id/btnChangePsw"
            style="@style/textstyle"
            android:layout_width="fill_parent"
            android:background="@drawable/cycleanytext_shape"
            android:onClick="OnChangePswClick"
            android:text="@string/resPwd"/>

    </LinearLayout>

</LinearLayout>